tests/baselines/reference/typeSatisfaction_js.errors.txt
/src/a.js(1,29): error TS8037: Type satisfaction expressions can only be used in TypeScript files.


==== /src/a.js (1 errors) ====
    var v = undefined satisfies 1;
                                ~
!!! error TS8037: Type satisfaction expressions can only be used in TypeScript files.
    